# sea-orm-playground

./: Cargo.toml  Dockerfile  README.md  bakery.sql  docker-compose.yml  entrypoint.sh
src/: main.rs  select.rs
